--- a/tinker/templates/faculty-bios/home.html
+++ b/tinker/templates/faculty-bios/home.html
@@ -266,7 +266,7 @@
                 "id": id,
                 "added": current_element.attr('data-method')
             };
-            var url = '/faculty-bios/cl';
+            var url = '/faculty-bios/toggle-courseleaf-user';
 
             current_element.html('. . . Updating . . .');
 
