--- a/tinker/templates/faculty-bios/home.html
+++ b/tinker/templates/faculty-bios/home.html
@@ -245,7 +245,7 @@
                 success: function (result) {
                     current_element.html('Success');
                     if( current_element.attr('data-method') == 'activate') {
-                        $('#activate-text-' + id).text('Activated');
+                        $('#activate-text-' + id).text('Activated on www.bethel.edu');
                     } else {
                         $('#activate-text-' + id).text('Deactivated');
                     }
