--- a/tinker/templates/faculty-bios/home.html
+++ b/tinker/templates/faculty-bios/home.html
@@ -37,7 +37,7 @@
                     {% endif %}
                 </span>
                 {% if text == 'Activated' %}
-                <span id="added-text-{{ bio.id }}" class="courseleaf-status">
+                <span id="added-text-{{ bio.id }}" class="bio-status">
                     {% if bio['courseleaf-user'] == 'Yes' %}
                         Added to catalog.bethel.edu (CourseLeaf)
                     {% else %}
@@ -72,13 +72,13 @@
                     {% if bio['courseleaf-user'] == 'Yes' %}
                         <li>
                             <a id="{{ bio.id }}" data-method="No" data-faculty-bio-id="{{ bio.id }}"
-                               class="small btn btn-primary btn-alert courseleaf-user-press">Remove from Catalog
+                               class="small btn btn-primary btn-alert courseleaf-user-click">Remove from Catalog
                             </a>
                         </li>
                     {% else %}
                         <li>
                             <a id="{{ bio.id }}" data-method="Yes" data-faculty-bio-id="{{ bio.id }}"
-                               class="small btn btn-primary btn-alert courseleaf-user-press">Add to Catalog
+                               class="small btn btn-primary btn-alert courseleaf-user-click">Add to Catalog
                             </a>
                         </li>
                     {% endif %}
@@ -260,7 +260,7 @@
         });
 
 
-        $(".courseleaf-user-press").click(function () {
+        $(".courseleaf-user-click").click(function () {
             $('#spinner').show();
             var current_element = $(this);
             var id = current_element.data('faculty-bio-id');
