--- a/tinker/templates/faculty-bios/form.html
+++ b/tinker/templates/faculty-bios/form.html
@@ -134,6 +134,17 @@ to be in it's own card div, something to think about in the future -->
     <script type="text/javascript">
 
         $(document).ready(function () {
+            $("#degree-delete1").hide();
+            addHandlerDegree(1);
+
+            function checkNumDegrees() {
+                var degrees = $(".degree-fieldset");
+                if (degrees.length < 2)
+                    $("#degree-delete1").hide();
+                else {
+                    $("#degree-delete1").show();
+                }
+            };
 
             function newDegreeTitleFieldset(id) {
                 var school = 'school' + id;
@@ -141,9 +152,9 @@ to be in it's own card div, something to think about in the future -->
                 var year = 'year' + id;
                 var fieldset_node = $('<fieldset>').addClass('degree-fieldset');
                 var inner_node = $("<div>").addClass('content');
-                inner_node.append($("<legend>").html("Degree " + id + ' ').append(
-                        $('<small>').addClass('required').html(' required'))
-                );
+                inner_node.append($("<legend>")
+                    .append($('<i>').addClass('fa fa-times fa-delete').attr('id', 'degree-delete' + id).attr('data-id', id)).append("Degree " + id + ' ')
+                    .append($('<small>').addClass('required').html(' required')));
                 inner_node.append($("<label>").attr('for', school).html("School"));
                 inner_node.append($("<input type='text'>").attr('name', school).attr('id', school).addClass("no-border"));
                 inner_node.append($("<label>").attr('for', degree).html("Degree Earned"));
@@ -245,6 +256,20 @@ to be in it's own card div, something to think about in the future -->
 
                 return fieldset_node;
             }
+
+            function addHandlerDegree(id) {
+                $("#degree-delete" + id).click(function () {
+                    id = $(this).data("id");
+                    var list = $(".degree-fieldset");
+                    for (var i = id; i < list.length; i++) {
+                        $('#school' + (i)).val($('#school' + (i + 1)).val());
+                        $('#degree-earned' + (i)).val($('#degree-earned' + (i + 1)).val());
+                        $('#year' + (i)).val($('#year' + (i + 1)).val());
+                    }
+                    list.last().remove();
+                    checkNumDegrees();
+                })
+            };
 
             function populateDegreeFieldset(id, school, degree, year) {
                 var schoolid = '#school' + id;
@@ -500,7 +525,8 @@ to be in it's own card div, something to think about in the future -->
                         var last = $(".degree-fieldset").last();
                         var new_degree = newDegreeTitleFieldset(id);
                         new_degree.insertAfter(last);
-                        $("#remove_degree_button").show();
+                        addHandlerDegree(id);
+{#                        $("#remove_degree_button").show();#}
                     }
                     //Now populate the fieldset
                     var degree_earned = '';
@@ -513,6 +539,9 @@ to be in it's own card div, something to think about in the future -->
                     i++;
 
                 }
+                // TODO: CALEB. Maybe this doesn't need to be here? - caleb
+                // by default, go ahead and
+                checkNumDegrees();
 
             {% endif %}
 
@@ -532,7 +561,9 @@ to be in it's own card div, something to think about in the future -->
                 var new_num = (parseInt(old_num) + 1);
                 var new_degree = newDegreeTitleFieldset(new_num);
                 new_degree.insertAfter(last);
-                $("#remove_degree_button").show();
+                checkNumDegrees();
+                addHandlerDegree(new_num);
+{#                $("#remove_degree_button").show();#}
             });
 
             $("#remove_degree_button").click(function () {
@@ -556,15 +587,15 @@ to be in it's own card div, something to think about in the future -->
                 $("#remove_new_job_button").show();
             });
 
-            $("#remove_new_job_button").click(function () {
-                var list = $(".new-job-fieldset");
-                var length = list.length;
-                //Hide remove button if there will only be one degree left
-                if (length == 2) {
-                    $("#remove_new_job_button").hide();
-                }
-                list.last().remove();
-            });
+{#            $("#remove_new_job_button").click(function () {#}
+{#                var list = $(".new-job-fieldset");#}
+{#                var length = list.length;#}
+{#                //Hide remove button if there will only be one degree left#}
+{#                if (length == 2) {#}
+{#                    $("#remove_new_job_button").hide();#}
+{#                }#}
+{#                list.last().remove();#}
+{#            });#}
 
             $("#facultybioform").submit(function () {
                 //add a hidden field with the number of jobs
@@ -620,7 +651,10 @@ to be in it's own card div, something to think about in the future -->
     <fieldset class="degree-fieldset">
         <div class="card">
             <div class="content">
-                <legend>Degree 1 <small class="required">required</small></legend>
+                <legend>Degree 1
+                    <small class="required">required</small>
+                    <i class="fa fa-times fa-delete" id="degree-delete1" data-id="1"></i>
+                </legend>
                 <label for="school1">School</label>
                 <input class="no-border" type="text" name="school1" id="school1"/>
 
