--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -15,7 +15,8 @@
                         <form action="" id="new-redirect-form">
                             <div class="row">
                                 <p>New or updated redirects become active automatically every 30 minutes.</p>
-                                <p>If you do not wish to wait for the next automatic update, click the button below:</p>
+                                <p>If you do not wish to wait for the next automatic update, click the button below
+                                    to update now:</p>
                             </div>
                             <div class="row">
                                 <div id="sftp-sync" class="btn btn-primary redirect-btn">
@@ -86,14 +87,17 @@
             $('#sftp-sync').click(function(){
                 var url = "{{ url_for('RedirectsView:manual_sftp_publish') }}";
                 $.post(url, null, function(data){
-                    $.notify({
-                        message: data
-                    }, {
-                        type: 'success',
-                        placement: {
-                            align: 'center'
-                        },
-                    });
+                    if(data) {
+                        data = JSON.parse(data);
+                        $.notify({
+                            message: data.message
+                        }, {
+                            type: data.type,
+                            placement: {
+                                align: 'center'
+                            },
+                        });
+                    }
                 });
             });
 
