changed the route in the href in e-announcements/results.html

--- a/tinker/templates/e-announcements/results.html
+++ b/tinker/templates/e-announcements/results.html
@@ -4,7 +4,7 @@
         <div class="content">
             <p>
                 {% if form.path != '' %}
-                    <a href={{ form.path }}>{{ form.title }}</a>
+                    <a href="https://cms.bethel.edu/entity/open.act?id={{ form.id }}&type=block">{{ form.title }}</a>
                 {% else %}
                     {{ form.title }}
                 {% endif %}
