--- a/tinker/templates/e-announcements/home.html
+++ b/tinker/templates/e-announcements/home.html
@@ -154,167 +154,8 @@
                 success: function (result) {
                     // window.location.replace(result);
                     document.getElementById('results').innerHTML = result;
-
-
-
-
-
-
-
-
-                    var numberOfItems = $(" #loop .list-group").length;
-                    var limitPerPage = $("#first").val();
-
-                    $("#selected-option").change(function() {
-                        var o = $(this).find("option:selected");
-                        if (o.val() === "All") {
-                            limitPerPage = numberOfItems;
-                        } else {
-                            limitPerPage = o.val()
-                        }
-
-                        $(".pagination").children("li.to-remove").remove();
-
-                        $(" #loop .list-group:gt(" + (limitPerPage - 1) + ")").hide();
-                        var totalPages = Math.ceil(numberOfItems / limitPerPage);
-                        $(".pagination").append("<li class='current-page active to-remove'><a href='javascript:void(0)'>" + 1 + "</a></li>");
-
-                        for (var i = 2; i <= totalPages; i++){
-                            $(".pagination").append("<li class='current-page to-remove'><a href='javascript:void(0)'>" + i + "</a></li>")
-                        }
-
-                        $(".pagination").append("<li id='next-page' class='to-remove'><a href='javascript:void(0)' aria-label='Next'><span aria-hidden='true'>&raquo;</span></a></li>");
-
-                        var currentPage = 1
-
-                        var grandTotal = limitPerPage * currentPage;
-
-                        for (var i = grandTotal - limitPerPage; i < grandTotal ; i ++) {
-                            $("#loop .list-group:eq(" + i + ")").show();
-                        }
-
-                        $(".pagination li.current-page").on("click", function() {
-                            if ($(this).hasClass("active")) {
-                                return false;
-                            } else {
-                                var currentPage = $(this).index();
-                                $(".pagination li").removeClass("active");
-                                $(this).addClass("active");
-                                $("#loop .list-group").hide();
-
-                                var grandTotal = limitPerPage * currentPage;
-
-                                for (var i = grandTotal - limitPerPage; i < grandTotal ; i ++) {
-                                    $("#loop .list-group:eq(" + i + ")").show();
-                                }
-                            }
-                        });
-
-                        $("#next-page").on("click", function() {
-                            var currentPage = $(".pagination li.active").index();
-                            if (currentPage === totalPages) {
-                                return false;
-                            } else {
-                                currentPage ++;
-                                $(".pagination li").removeClass("active");
-                                $("#loop .list-group").hide();
-
-                                var grandTotal = limitPerPage * currentPage;
-
-                                for (var i = grandTotal - limitPerPage; i < grandTotal ; i ++) {
-                                $("#loop .list-group:eq(" + i + ")").show();
-                                }
-
-                                $(".pagination li.current-page:eq(" + (currentPage - 1) + ")").addClass("active");
-                            }
-
-                        });
-
-                    });
-
-
-
-
-
-
-
-
-                    $(" #loop .list-group:gt(" + (limitPerPage - 1) + ")").hide();
-                    var totalPages = Math.ceil(numberOfItems / limitPerPage);
-
-                    $(".pagination").append("<li class='current-page active to-remove'><a href='javascript:void(0)'>" + 1 + "</a></li>");
-
-                    for (var i = 2; i <= totalPages; i++){
-                        $(".pagination").append("<li class='current-page to-remove'><a href='javascript:void(0)'>" + i + "</a></li>")
-                    }
-
-                    $(".pagination").append("<li id='next-page' class='to-remove'><a href='javascript:void(0)' aria-label='Next'><span aria-hidden='true'>&raquo;</span></a></li>");
-
-                    $(".pagination li.current-page").on("click", function() {
-                        if ($(this).hasClass("active")) {
-                            return false;
-                        } else {
-                            var currentPage = $(this).index();
-                            $(".pagination li").removeClass("active");
-                            $(this).addClass("active");
-                            $("#loop .list-group").hide();
-
-                            var grandTotal = limitPerPage * currentPage;
-
-                            for (var i = grandTotal - limitPerPage; i < grandTotal ; i ++) {
-                                $("#loop .list-group:eq(" + i + ")").show();
-                            }
-                        }
-                    });
-
-                    $("#next-page").on("click", function() {
-                        var currentPage = $(".pagination li.active").index();
-                        if (currentPage === totalPages) {
-                            return false;
-                        } else {
-                            currentPage ++;
-                            $(".pagination li").removeClass("active");
-                            $("#loop .list-group").hide();
-
-                            var grandTotal = limitPerPage * currentPage;
-
-                            for (var i = grandTotal - limitPerPage; i < grandTotal ; i ++) {
-                                $("#loop .list-group:eq(" + i + ")").show();
-                            }
-
-                            $(".pagination li.current-page:eq(" + (currentPage - 1) + ")").addClass("active");
-
-                        }
-
-                    });
-
-                    $("#previous-page").on("click", function() {
-                        var currentPage = $(".pagination li.active").index();
-                        if (currentPage === 1) {
-                             return false;
-                        } else {
-                             currentPage --;
-                             $(".pagination li").removeClass('active');
-                             $("#page .list-group").hide();
-
-                             var grandTotal = limitPerPage * currentPage;
-
-                             for (var i = grandTotal - limitPerPage; i < grandTotal; i++) {
-                                 $("#page .list-group:eq(" + i + ")").show();
-                             }
-
-                             $(".pagination li.current-page:eq(" + (currentPage - 1) + ")").addClass('active');
-                         }
-                    });
-
-
-
-
-
-
-
-
                     $('#spinner').hide();
+                    window.onload(pagination());
                 }
             });
         }
@@ -327,8 +168,6 @@
             $("#modal-confirm").attr("href", "/e-announcements/delete/" + $(this).data('e-announcement-id'));
         });
     });
-
-
     </script>
 
 {% endblock %}
