--- a/tinker/templates/events/search-results.html
+++ b/tinker/templates/events/search-results.html
@@ -52,7 +52,7 @@
                         </li>
                         <li style="list-style-type: none;">
                             <select id="selected-option">
-                                <option id="first" selected="selected" value="10">10</option>
+                                <option id="selected-default" selected="selected" value="10">10</option>
                                 <option value="20">20</option>
                                 <option value="50">50</option>
                                 <option value="All">All</option>
