some logic to avoid errors

--- a/tinker/templates/e-announcements/results.html
+++ b/tinker/templates/e-announcements/results.html
@@ -48,28 +48,30 @@
         <h2>{{ forms_header }}</h2>
         {% if search_results is defined and search_results | length > 0 %}
             <div id="loop" class="form-group col-md-12">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination">
-                        <li id="previous-page">
-                            <a href="javascript:void(0)">
-                                <span aria-hidden="true">&laquo;</span>
-                            </a>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li style="list-style-type: none;">
-                            Limit
-                        </li>
-                        <li style="list-style-type: none;">
-                            <select id="selected-option">
-                                <option id="selected-default" selected="selected" value="10">10</option>
-                                <option value="20">20</option>
-                                <option value="50">50</option>
-                                <option value="All">All</option>
-                            </select>
-                        </li>
-                    </ul>
-                </nav>
+                {% if search_results|length > 10 %}
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            <li id="previous-page">
+                                <a href="javascript:void(0)">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li style="list-style-type: none;">
+                                Limit
+                            </li>
+                            <li style="list-style-type: none;">
+                                <select id="selected-option">
+                                    <option value="10" selected="selected">10</option>
+                                    <option value="20">20</option>
+                                    <option value="50">50</option>
+                                    <option value="{{ search_results|length }}">All</option>
+                                </select>
+                            </li>
+                        </ul>
+                    </nav>
+                {% endif %}
                 {% for form in search_results %}
                     <div class="list-group">
                         {{ form_card(form) }}
